deployment/controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ingress-nginx-controller
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
      - image: nginx/nginx-ingress:2.4.2-ubi
        name: nginx-ingress-controller
      args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
    ports:
      - containerPort: 80
        hostPort: 80
