deployment/ipapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ipapp
    labels:
        app: ipapp
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ipapp
    template:
        metadata:
            labels:
                app: ipapp
        spec:
            containers:
            - image: hadarneu/ipapp
              name: ipapp
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ipapp-service
spec:
  selector:
    app: ipapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
